# 3dgs-ply2gltf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dump.cpp  dump.h  io.cpp  io.h  main.cpp
.github/workflows/: ci.yml  release.yml
